feat(inference): TEE charge response (#204)
