# api/inference/doc/swagger.json
@@ -9,6 +9,23 @@
     "host": "localhost:3080",
     "basePath": "/v1",
     "paths": {
+        "/quote": {
+            "get": {
+                "description": "This endpoint allows you to get a quote",
+                "tags": [
+                    "quote"
+                ],
+                "operationId": "getQuote",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/request": {
             "get": {
                 "description": "This endpoint allows you to list requests",
@@ -161,9 +178,11 @@
                 "fee",
                 "inputFee",
                 "nonce",
-                "previousOutputFee",
+                "outputFee",
+                "requestHash",
                 "serviceName",
                 "signature",
+                "teeSignature",
                 "userAddress"
             ],
             "properties": {
@@ -180,16 +199,22 @@
                 "nonce": {
                     "type": "string"
                 },
-                "previousOutputFee": {
+                "outputFee": {
                     "type": "string"
                 },
                 "processed": {
                     "type": "boolean"
                 },
+                "requestHash": {
+                    "type": "string"
+                },
                 "serviceName": {
                     "type": "string"
                 },
                 "signature": {
+                    "type": "string"
+                },
+                "teeSignature": {
                     "type": "string"
                 },
                 "updatedAt": {
@@ -289,9 +314,6 @@
                     "type": "string"
                 },
                 "lastRequestNonce": {
-                    "type": "string"
-                },
-                "lastResponseFee": {
                     "type": "string"
                 },
                 "lockBalance": {
